--- a/src/styles/material-dashboard/_toolbar.scss
+++ b/src/styles/material-dashboard/_toolbar.scss
@@ -30,7 +30,7 @@
     .v-toolbar__title {
       font-size: $font-size-toolbar-title;
       letter-spacing: unset;
-      color: $black-color;
+      color: $body-color;
     }
 
     .v-toolbar__items {
